# carson

./: .gitignore  README.md
.github/workflows/: azure-container-api.yml  azure-container-web.yml
agents/simple/: create.py  exists.py  main.py  pyproject.toml
api/: Dockerfile  README.md  pyproject.toml  run_tests.py
api/app/: main.py
api/app/dependencies/: __init__.py
api/app/models/: __init__.py  configuration.py  record.py  settings.py
api/app/routers/: __init__.py  configuration.py  record.py
api/app/services/: __init__.py  cosmos.py  storage.py
api/tests/: __init__.py  conftest.py  test_smoke.py
api/tests/integration/: test_configuration_integration.py
api/tests/unit/: test_configuration_router.py  test_settings.py
web/: .gitignore  README.md  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
web/api/: sdk.gen.ts  types.gen.ts
web/api/@tanstack/: react-query.gen.ts
web/app/: defaults.scss  favicon.tsx  global.scss  root.tsx  routes.ts
web/app/routes/: app.module.scss  app.tsx  home.module.scss  home.tsx
web/components/output/: output.module.scss  output.tsx  outputdisplay.module.scss  outputdisplay.tsx
web/components/settings/: setting.module.scss  setting.tsx  settings.module.scss  settings.tsx
web/components/structure/: modal.module.scss  modal.tsx  panel.module.scss  panel.tsx  title.module.scss  title.tsx  tool.module.scss  tool.tsx  voicetool.module.scss  voicetool.tsx
web/components/workflow/: taskedge.module.scss  (+5 more)
web/store/: data.ts  items.ts  output.ts  usedimensions.tsx  useuser.tsx  utils.ts
